--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,6 +23,17 @@
           </div>
         </div>
       </div>
+      <div class="col-md-12">
+        <% if logged_in? %>
+        <div id="like-form" class="col-md-1">
+          <%= render "likes/form" %>
+        </div>
+        <% end %>
+        <div  id="like-div">
+          <%= render "likes/like" %>
+      </div>
+      </div>
+      <div class="clearfix"></div>
       <hr>
       <div class="feed-activity-list col-md-6">
         <% if logged_in? %>
