--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -21,7 +21,7 @@
               <td><%= order.user_name %></td>
               <td><%= order.created_at %></td>
               <td>
-                <%= link_to t(".detail"), admin_order_detail_path(order), class: "btn btn-success" %>
+                <%= link_to t(".detail"), admin_order_path(order), class: "btn btn-success" %>
               </td>
               <td>
                 <%= link_to t(".edit"), edit_admin_order_path(order), class: "btn btn-primary" %>
