--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -91,3 +91,19 @@ a.btn-create{
   width: 100%;
   height: 300px;
 }
+.custom-image{
+  height:300px;
+}
+div.round {
+  border: 2px solid red;
+  border-radius: 10px;
+  height:400px;
+  width: 400px;
+  float: right;
+}
+div.text{
+  float: left;
+}
+div.contact{
+  margin-top: 45px;
+}
