edit homepage layout

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -119,3 +119,9 @@ p.paragraph{
     display: -webkit-box;
     -webkit-box-orient: vertical;
 }
+.slider-content-text.white.text-center.text-uppercase.animated.bounceIn {
+  height: 400px;
+}
+.hot-blog {
+  padding-top: 100px;
+}
