--- a/app/views/admin/posts/edit.html.erb
+++ b/app/views/admin/posts/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for [:admin, @post] do |f| %>
+    <%= form_for [:admin, @postz] do |f| %>
       <%= render "shared/error_messages", object: f.object %>
 
       <%= f.label :title %>
